[OPIK-1542] Fix formating for markdown with extra spaces (#2189)

--- a/apps/opik-frontend/src/main.scss
+++ b/apps/opik-frontend/src/main.scss
@@ -320,13 +320,12 @@
   font-weight: 400;
   letter-spacing: 0.02em;
   max-width: 100%;
-  white-space: pre-wrap;
   overflow-wrap: break-word;
   word-break: break-word;
 
   pre code {
     font-size: 0.875rem !important;
-    white-space: pre-wrap;
+    white-space: preserve-breaks;
     overflow-wrap: break-word;
     word-break: break-word;
   }
